Netif implementedd using runtime polymorphism. Not completely impleented. Only api's necessary for wifi

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "iot-app-esp32c3.cpp" "wifi.cpp"
+idf_component_register(SRCS "iot-app-esp32c3.cpp" "wifi.cpp" "netif.cpp"
                     INCLUDE_DIRS ".")
